src/renderer/components/layout/panels.css
.Panels {
  height: 100%;
  width: 100%;
}

/* react-resizable-panels v4 styles */
[data-group] {
  display: flex;
  height: 100%;
  width: 100%;
}

[data-group][data-orientation='horizontal'] {
  flex-direction: row;
}

[data-group][data-orientation='vertical'] {
  flex-direction: column;
}

[data-panel] {
  overflow: hidden;
}

.panel {
  display: flex;
  background-color: rgb(3, 3, 3);
  width: 100%;
  height: 100%;
}

.panel-content {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.handle {
  cursor: col-resize;
  background-color: rgb(12, 12, 12);
  transition: background-color 0.2s ease-in-out;
  border-radius: 2px;
}

.handle:hover {
  background-color: rgb(173, 173, 173);
}

.vertical {
  width: 8px;
  margin: 0.5rem 0;
}

.horizontal {
  height: 8px;
  margin: 0 0.5rem;
}

.drag-handle {
  -webkit-user-select: none;
  -webkit-app-region: drag;
  position: fixed;
  width: 100%;
  height: 30px;
  z-index: 100;
}

.Panels.file-drop-active {
  outline: 2px solid rgba(74, 158, 255, 0.7);
  outline-offset: -2px;
}

